# shipsafe-voyageblack

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  deploy.sh  main.py  pyproject.toml
agent/: ais_stream.py  config.py  critic.py  elastic_mcp.py  models.py  orchestrator.py  runner_utils.py
agent/specialists/: correlation_engine.py  impact_calculator.py  report_writer.py  root_cause_analyzer.py  timeline_builder.py
cli/: package-lock.json  package.json  tsconfig.json
cli/src/: index.ts
cli/src/commands/: connect.ts  demo.ts  init.ts
dashboard/: .gitignore
dashboard/dashboard/: Dockerfile  cloudbuild.yaml  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/dashboard/app/postmortem/[id]/: page.tsx
dashboard/dashboard/components/: approval-gate.tsx  pipeline-stream.tsx  service-correlation.tsx  similar-incidents.tsx  timeline-view.tsx
docs/: DEVPOST.md
scripts/: create_mappings.py  load_fixtures.py  load_generic_fixtures.py  verify_mcp.py
terraform/: cloud_run.tf  main.tf  outputs.tf  secrets.tf  variables.tf
tests/: conftest.py  test_api.py  test_correlation_engine.py  test_critic.py  test_impact_calculator.py  test_models.py  test_orchestrator.py  test_report_writer.py  test_root_cause_analyzer.py  test_timeline_builder.py
