[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shipsafe-voyageblack"
version = "0.1.0"
description = "Automated postmortem generation from incident logs — powered by Elastic"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Prateek Srivastava", email = "prateek.srivastava2311@gmail.com" }]
dependencies = [
    "google-adk>=1.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "openinference-instrumentation-google-adk>=0.1.0",
    "arize-phoenix-otel>=0.6.1",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=agent --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "B", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
